--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -45,3 +45,9 @@ button:hover {
     font-weight: bold;
     margin-top: 10px;
 }
+.image-style {
+    width: 100%;
+    height: auto;
+    max-width: 600px;
+    border-radius: 24px;
+}
