--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -393,3 +393,34 @@ a {
         font-size: 24px;
     }
 }
+.email-form {
+    margin: 20px;
+    text-align: center;
+}
+
+#formContainer {
+    margin-top: 10px;
+}
+
+#messageBox {
+    width: 80%;
+    height: 100px;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 16px;
+}
+
+#sendEmail {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    text-decoration: none;
+    color: white;
+    background-color: #007BFF;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#sendEmail:hover {
+    background-color: #0056b3;
+}
