--- a/styles/index.css
+++ b/styles/index.css
@@ -155,6 +155,30 @@ a {
     transition: background-color 0.3s ease;
 }
 
+#sidebar h2 {
+    color: var(--letter-color-black);
+    text-align: center;
+    margin: 26px 0;
+    font-size: 24px;
+    font-weight: bold;
+    animation: bounceAndFade 4s infinite;
+}
+
+/* Nueva animación para el h2 */
+@keyframes bounceAndFade {
+    0%, 100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+    25%, 75% {
+        transform: translateY(-20px);
+        opacity: 0.5;
+    }
+    50% {
+        transform: translateY(-10px);
+        opacity: 0.8;
+    }
+}
 #sidebar.open {
     background-color: #333;
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
@@ -289,4 +313,41 @@ a {
         color: #ffffff;
         box-shadow: 0 0 10px rgba(0, 128, 255, 0.5);
     }
+}
+/* Nueva animación para el enlace especial */
+@keyframes specialEmailEffect {
+    0% {
+        font-size: 8px;
+        color: #ffffff;
+        text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    }
+    33% {
+        font-size: 14px;
+        color: #ff69b4;
+        text-shadow: 0 0 10px rgba(255, 105, 180, 0.7);
+    }
+    66% {
+        font-size: 24px;
+
+        color: #00ffff;
+        text-shadow: 0 0 15px rgba(0, 255, 255, 0.9);
+    }
+    100% {
+        font-size: 8px;
+        color: #ffffff;
+        text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
+    }
+}
+
+/* Aplicar la animación al enlace especial */
+#menuContent ul li a.email {
+    animation: specialEmailEffect 3s infinite;
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+
+/* Pausar la animación al hacer hover */
+#menuContent ul li a.email:hover {
+    animation-play-state: paused;
+    transform: scale(1.1); /* Opcional: Añade un pequeño efecto de escala al hacer hover */
 }
